# src/server.ts
@@ -2,7 +2,7 @@ import 'dotenv/config';
 import app from './app';
 import connectToDatabase from './Models/Connection';
 
-const PORT = process.env.PORT || 3013;
+const PORT = process.env.PORT || 3000;
 connectToDatabase()
   .then(() => {
     app.listen(PORT, () => console.log(`Running server on port: ${PORT}`));
